...
  const wp = meQuery.data?.workerProfile
  const activeTask = activeQuery.data
  const wallet = walletQuery.data

  const firstName = user?.name?.split(' ')[0] ?? 'there'
  const hour = new Date().getHours()
  const greeting = hour < 12 ? 'Good morning' : hour < 17 ? 'Good afternoon' : 'Good evening'

  const completedTasks = wp?.completedTasks ?? 0
  const workerLevel = useMemo(() => getWorkerLevel(completedTasks), [completedTasks])

  const totalEarned = wallet?.totalEarnedCents ?? 0
  const inAccount = wallet?.paidOutCents ?? wallet?.availableCents ?? 0
...
